# sound-propagation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
examples/: generate_pink_noise.py  propagation_filter.py  propagation_fir_filter.py
examples/graph_output/: README.md  plot_propagation_psd.py
examples/propagation_filter/: README.md  propagation_fir_filter.py
src/sound_propagation/: __init__.py  atmospheric_absorption.py  ground_attenuation.py
tests/: test_atmospheric_absorption.py  test_ground_attenuation.py  test_pink_noise_propagation.py
