[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sound-propagation"
version = "0.1.0"
description = "ISO 9613-1/2 atmospheric sound absorption and ground attenuation"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/sound_propagation"]
